# adk-course

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
a2a_example/: README.md  run_servers.py
a2a_example/a2a_orchestrator/: __init__.py  agent.py
a2a_example/analysis_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
a2a_example/content_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
a2a_example/research_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
content_moderator/: README.md  agent.py
evaluation/: README.md  __init__.py  agent.py  tools.py
evaluation/support_agent/: __init__.py  agent.py
evaluation/tests/: complex.evalset.json  simple.test.json  test_agent.py  ticket_creation.test.json
mcp_integration/: README.md  agent.py  document_organizer.py
multi_agent_orchestration/: README.md  agent.py  root_agent.yaml
multi_agent_orchestration/agents/: article_editor.yaml  article_formatter.yaml  article_writer.yaml  expert_finder.yaml  expert_pipeline.yaml  news_fetcher.yaml  news_pipeline.yaml  news_summarizer.yaml  parallel_research.yaml  quote_extractor.yaml  sentiment_analyzer.yaml  social_monitor.yaml  social_pipeline.yaml
