[project]
name = "adk-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.pyrefly]
search-path = ["multi_agent_orchestration"]
project-includes = [
    "multi_agent_orchestration/**/*.py",
]
python-interpreter = ".venv/bin/python"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
fixable = ["ALL"]
ignore = ["C408"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]

[tool.ruff.lint.isort]
known-first-party = ["praso_agents"]

[tool.ruff.lint.pydocstyle]
convention = "google"
