[project]
name = "adk-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a,eval]>=2.2.0",
    "mcp>=1.28.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pyclean>=3.7.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pyrefly]
search-path = [".", "evaluation"]
project-includes = [
    "**/*.py",
]
python-interpreter = ".venv/bin/python"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
fixable = ["ALL"]
ignore = ["C408"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "D"]

[tool.ruff.lint.isort]
known-first-party = ["praso_agents"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["evaluation/tests"]
pythonpath = ["evaluation"]
addopts = [
    "--color=yes",
    "--strict-config",
    "--strict-markers",
    "-p no:cacheprovider",
    "-ra",
    "-x",
    "-v"
]
filterwarnings = [
    "ignore::UserWarning:google.adk",
    "ignore::DeprecationWarning:google.adk",
    "ignore::DeprecationWarning:aiohttp",
]
